adding blank plugin

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -210,8 +210,10 @@ ManualIPAddress=
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Mobile
-DefaultGraphicsPerformance=EGraphicsPreset::Scalable
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/ExploreBLE_Plugin")
