adding xml file

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,3 +226,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bPackageDataInsideApk=True
+bDisableVerifyOBBOnStartUp=True
+
