working plugin, with functions to bind to events

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,7 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F48392C84C41302D49464E94AAD83C37
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
