working endurance and intensity characteristics

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/FirstPerson/Blueprints/MotusInstance.MotusInstance_C
+GameInstanceClass=/ExploreBLE/MotusBLEGameInstance.MotusBLEGameInstance_C
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
@@ -234,7 +234,7 @@ StoreVersionOffsetX8664=0
 ApplicationDisplayName=
 VersionDisplayName=1.0
 MinSDKVersion=29
-TargetSDKVersion=31
+TargetSDKVersion=30
 InstallLocation=InternalOnly
 bEnableLint=False
 bPackageDataInsideApk=True
